# autodevai

./: .dockerignore  .env.example  .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .huskyrc.json  .lintstagedrc  .mcp.json  .prettierignore  .prettierrc.json  .tsbuildinfo  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE-COMMERCIAL  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  ROADMAP_COMPLETION_SUMMARY.md  SECURITY_IMPLEMENTATION_SUMMARY.md  STEP_175_COMPLETION_REPORT.md  build_status.txt  claude-flow  claude-flow.config.json  code.md  code.sh  code_github.md  code_github_generic.md  commitlint.config.js  debug-styles.css  ecosystem.config.mjs  eslint.config.js  final-ts-fixes.sh  fix-all-ts-errors.sh  fix-typescript.sh  github-callback-init.sh  github-callback-server.js  github-callback.service  index.html  (+24 more)
src-tauri/: .dockerignore  Cargo.toml  Dockerfile.build  README.md  after-build.sh  before-build.sh  build-config.toml  build-test.sh  build.rs  bundle.json  docker-compose.build.yml  fix_compilation.sh  tauri.conf.json  types.d.ts  window_state_test.rs
src-tauri/.cargo/: config.toml
src-tauri/benches/: performance.rs
src-tauri/icons/: README.md  create_icons.py  icon.icns
src-tauri/scripts/: build.sh  dev.sh  test-coverage.sh  test.sh
src-tauri/src/: ai_orchestration.rs  commands.rs  config.rs  dev_window.rs  docker.rs  docker_manager.rs  errors.rs  events.rs  ipc_security.rs  lib.rs  logging.rs  main.rs  main_full.rs  menu.rs  orchestration.rs  security.rs  setup.rs  state.rs  tests.rs  tray.rs  types.rs  updater.rs  utils.rs  window_state.rs
src-tauri/src-tauri/src/: main.rs
src-tauri/src/api/: claude_flow.rs  docker.rs  mod.rs
src-tauri/src/app/: mod.rs  setup.rs  updater.rs
src-tauri/src/commands/: ai_orchestration.rs  enhanced_ai_commands.rs  performance.rs  tests.rs
src-tauri/src/database/: backup.rs  mod.rs  models.rs  schema.rs
src-tauri/src/monitoring/: health.rs  logger.rs  metrics.rs  mod.rs  security_integration.rs
src-tauri/src/performance/: cache.rs  concurrency.rs  database.rs  memory.rs  metrics.rs  mod.rs  monitoring.rs  network.rs  optimized_orchestration.rs  profiler.rs
src-tauri/src/plugins/: dev_tools.rs  file_system.rs  global_shortcuts.rs  logging.rs  menu.rs  mod.rs  notifications.rs  system_tray.rs  updater.rs  window_state.rs
src-tauri/src/security/: audit_logger.rs  command_validator.rs  enhanced_ipc_security.rs  input_sanitizer.rs  ipc_security.rs  ipc_security_old.rs  mod.rs  rate_limiter.rs  session_manager.rs
src-tauri/src/settings/: manager.rs  mod.rs
src-tauri/src/tests/: cross_platform_tests.rs  e2e_workflow_tests.rs  ipc_security_integration_tests.rs  menu_integration_tests.rs  menu_tests.rs  mod.rs  performance_stress_tests.rs  security_integration_test.rs  security_tests.rs  tray_integration_tests.rs  updater_integration_tests.rs  updater_tests.rs  window_state_integration_tests.rs  window_state_tests.rs
src-tauri/tests/: integration.rs  mod.rs
tests/: COMPREHENSIVE_TEST_REPORT.md  Cargo.toml  README.md  TESTING_INFRASTRUCTURE_REPORT.md  ci-config.yml  comprehensive-app-tests.test.tsx  comprehensive-component-tests.test.tsx  comprehensive-hooks-tests.test.tsx  comprehensive-services-tests.test.ts  critical-errors-analysis.md  jest.config.js  menu_test.rs  package.json  playwright.config.ts  qa-final-report.md  qa-test-scenarios.md  quality-gates-checklist.md  security_test.rs  setup.ts  tsconfig.json  typescript-fixes-validation.test.tsx  typescript-validation-report.md  typescript-validation-strategy.md
tests/accessibility/: a11y-audit.test.tsx
tests/e2e/: global-setup.ts  global-teardown.ts  responsive-workflow.spec.ts  workflows.test.ts
tests/fixtures/: test-data.json
tests/frontend/: setup.ts
tests/frontend/components/: App.test.tsx
tests/integration/: github-workflow-security.test.ts  github-workflow-validation.test.ts  github-workflow.test.ts  hive-coordination.test.ts  orchestration.test.ts  setup.ts  system-integration.test.ts  tauri-ipc.test.ts
tests/mocks/: api-mocks.ts  external-deps.ts  github-api.ts  webhook-server.ts
tests/performance/: README.md  bundle-analyzer.test.js  jest.config.js  load-test.yml  setup.js  test-data.csv
tests/performance/baselines/: ai-model-response-baseline.json  api-throughput-baseline.json  memory-usage-baseline.json
tests/performance/benchmarks/: claude-flow-swarm-performance.test.js  codex-generation-speed.test.js  concurrent-task-execution.test.js  openrouter-api-benchmarks.test.js  performance-benchmarks.test.js
tests/performance/dashboard/: metrics-dashboard.test.js
tests/performance/load/: ai-model-load.test.js  high-concurrency-load.test.js  service-port-load.test.js
tests/performance/monitoring/: response-time-monitor.test.js
tests/performance/regression/: regression-testing.test.js
tests/performance/reporting/: performance-metrics-collector.js
tests/performance/reports/: baseline-benchmarks.json  regression-pipeline-report.json
tests/reports/: TESTING_INFRASTRUCTURE_SUMMARY.md
tests/responsive/: accessibility-audit.test.ts  browser-testing.config.ts  cross-browser.test.ts  performance-optimization.test.ts  responsive-test-suite.test.ts  setup.ts
tests/security/: api-key-validation.test.js  api-security.test.js  audit-logging.test.js  compliance-monitoring.test.js  container-security.test.js  docker-security.test.js  input-sanitization.test.js  owasp-compliance.test.js  penetration-testing.test.js  rate-limiting.test.js  run-security-tests.js  security-config.js  security-incident-response.js  security-monitoring-dashboard.js  security-tests.js  setup.js
tests/strategy/: comprehensive-testing-strategy.md  load-testing-implementation.js  performance-benchmark-framework.js
tests/unit/: components.test.tsx  hooks.test.tsx  integration-api.test.ts  performance.test.ts  setup-enhanced.ts  setup.ts  test-utils.tsx  utils.test.ts
tests/utils/: security-scanner.ts  test-helpers.ts  test-repository.ts  test-suspense.tsx  workflow-validator.ts
tests/validation/: validation-framework.ts
(+441 files in other folders)
