[package]
name = "neural-bridge-platform"
version = "0.1.0"
description = "Neural Bridge Platform for Claude-Flow and OpenAI Codex orchestration"
authors = ["AutoDev-AI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bollard = "0.14"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
# Window state management using built-in Tauri APIs (Tauri v1.5 compatible)
directories = "6.0"
tauri-plugin-window-state = "2.4.0"
tauri-plugin-single-instance = "2.0"
# Additional plugins for complete system - using compatible versions
# tauri-plugin-global-shortcut = "2.0"
# tauri-plugin-notification = "2.0"
# tauri-plugin-fs = "2.0"
# tauri-plugin-shell = "2.0"
# tauri-plugin-dialog = "2.0"
# tauri-plugin-updater = "2.0"
# tauri-plugin-log = "2.0"
log = "0.4"
env_logger = "0.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
incremental = true
overflow-checks = true

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"
rpath = false
debug-assertions = false

[profile.dev-fast]
inherits = "dev"
opt-level = 1
incremental = true
debug-assertions = true

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
serial_test = "3.0"
tokio-test = "0.4"
pretty_assertions = "1.4"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
path = "benches/performance.rs"
