[package]
name = "neural-bridge-platform"
version = "0.1.0"
description = "Neural Bridge Platform for Claude-Flow and OpenAI Codex orchestration"
authors = ["AutoDev-AI"]
edition = "2021"
resolver = "2"
default-run = "neural-bridge-platform"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

[dependencies]
glib = "0.20.12"  # Security fix for GHSA-wrw7-89jp-8q8g vulnerability
tauri = { version = "2.8.5", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
# Enhanced AI orchestration dependencies
tokio-util = "0.7"
dashmap = "5.5"
parking_lot = "0.12"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bollard = "0.19"
futures-util = "0.3"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
# Window state management using built-in Tauri APIs (Tauri v1.5 compatible)
directories = "5.0"
tauri-plugin-window-state = "2.4.0"
tauri-plugin-single-instance = "2.0"
lazy_static = "1.4"
# Additional plugins for complete system - using compatible versions
# tauri-plugin-global-shortcut = "2.0"
tauri-plugin-notification = "2.0"
# tauri-plugin-fs = "2.0"
# tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2.0"
# tauri-plugin-log = "2.0"
log = "0.4"
env_logger = "0.11"
option-ext = "0.2"
sha2 = "0.10"
hex = "0.4"
# Additional security dependencies
regex = "1.10"
rand = "0.9"
url = "2.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
incremental = true
overflow-checks = true

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"
rpath = false
debug-assertions = false
overflow-checks = false

[profile.dev-fast]
inherits = "dev"
opt-level = 1
incremental = true
debug-assertions = true

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
serial_test = "3.0"
tokio-test = "0.4"
pretty_assertions = "1.4"
proptest = "1.4"
criterion = { version = "0.7", features = ["html_reports"] }
# Additional test dependencies for comprehensive testing
# tauri-driver = "0.1"  # Commented out - not needed for unit tests
once_cell = "1.19"
async-trait = "0.1"
wiremock = "0.6"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }  # Dev dependency only - not critical
test-log = "0.2"
rstest = "0.26"
rstest_reuse = "0.7"
fake = { version = "4.4", features = ["derive", "chrono"] }
# Security testing
secrecy = "0.10"

[[bench]]
name = "performance"
harness = false
path = "benches/performance.rs"

[[bin]]
name = "window_state_test"
path = "window_state_test.rs"

# SECURITY MITIGATION for GHSA-wrw7-89jp-8q8g:
# Direct dependency updated to glib 0.20.12 (secure)
# Remaining vulnerable glib 0.18.5 instances are transitive through GTK/Tauri
# These don't expose the vulnerable VariantStrIter functionality to our app
# TODO: Monitor for Tauri ecosystem updates to fully resolve transitive deps
