[package]
name = "autodevai-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
rstest = "0.18"
proptest = "1.0"
pretty_assertions = "1.4"

[[test]]
name = "integration"
path = "rust/integration/mod.rs"

[[test]]
name = "unit"
path = "rust/unit/mod.rs"

[[bench]]
name = "performance"
harness = false